# auto-paper-digest

./: .env.example  .gitignore  README.md  pyproject.toml
apd/: __init__.py  cli.py  config.py  db.py  digest.py  douyin_bot.py  hf_fetcher.py  nblm_bot.py  pdf_downloader.py  publisher.py  utils.py
portal/: README.md  app.py  requirements.txt
