[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apd"
version = "0.1.0"
description = "Auto Paper Digest - Fetch HF papers, generate NotebookLM video overviews"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Auto Paper Digest"}
]
keywords = ["papers", "huggingface", "notebooklm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
apd = "apd.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["apd*"]

[tool.setuptools.package-data]
apd = ["py.typed"]
